# simulation_based_calibration

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment-dev.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  usage-question.md
.github/workflows/: publish-to-test-pypi.yml  test.yml
docs/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst
docs/_templates/autosummary/: class.rst
docs/api/: index.rst
docs/examples/gallery/: sbc.md
simuk/: __init__.py  plots.py  sbc.py
simuk/tests/: test_sbc.py
simulation_based_calibration/: __init__.py  plots.py  sbc.py  simulation_based_calibration.py
