[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simuk"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "ArviZ team", email = "arviz.devs@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
description = "Simulation based calibration and generation of synthetic data."
dependencies = [
  "pymc>=5.20",
  "bambi>=0.15.0",
  "arviz>=0.20.0",
]

[tool.flit.module]
name = "simuk"

[project.urls]
source = "https://github.com/arviz-devs/simuk"
tracker = "https://github.com/arviz-devs/simuk/issues"
funding = "https://opencollective.com/arviz"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 100

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "D",  # pydocstyle
    "NPY", # numpy specific rules
    "UP",  # pyupgrade
    "I",  # isort
    "PL",  # Pylint
    "TID",  # Absolute imports
]
ignore = [
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "PLR0915",  # too many statements
    "NPY002",   # Replace legacy `np.random.randn` call with `np.random.Generator`
    "D1"    # Missing docstring
]

[tool.ruff.lint.per-file-ignores]
"docs/source/**/*.ipynb" = ["D", "E", "F", "I", "NPY", "PL", "TID", "UP", "W"]
"simuk/__init__.py" = ["I", "F401", "E402", "F403"]
"simuk/tests/**/*" = ["D", "PLR2004", "TID252"]
"simuk/tests/**/*.ipynb" = ["E", "F"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # Disallow all relative imports.

[tool.ruff.format]
docstring-code-format = false
